--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <script src="https://kit.fontawesome.com/4b7b141e00.js" crossorigin="anonymous"></script>
     <title>Twitter Clone</title>
   </head>
   <body>
